--- a/styles/index.css
+++ b/styles/index.css
@@ -59,7 +59,8 @@ header section#icon .classes {
   }
   header section#icon {
     display: grid;
-    grid-template: 70px 62px/2fr 5fr 3fr 2fr 1fr;
+    grid-template: 70px 62px/1fr 2fr 2fr 2fr 1fr;
+    gap: 10px;
     width: 100%;
     height: inherit;
   }
@@ -71,7 +72,7 @@ header section#icon .classes {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 323px;
+    width: 230px;
     height: 28px;
     background-color: #F2F2F2;
     border-radius: 20px;
@@ -154,6 +155,18 @@ header section#icon .classes {
     display: none;
   }
 }
+@media screen and (min-width: 1200px) {
+  header {
+    height: 147px;
+    padding: 0 50px;
+  }
+  header section#icon {
+    grid-template: 70px 62px/2fr 5fr 3fr 3fr 2fr;
+  }
+  header section#icon .search {
+    width: 323px;
+  }
+}
 section#main-banner {
   display: flex;
   flex-direction: column;
@@ -165,6 +178,7 @@ section#main-banner {
   background-color: black;
   position: relative;
   overflow: hidden;
+  padding: 62px 0 16px 0;
 }
 section#main-banner img {
   position: absolute;
@@ -180,8 +194,8 @@ section#main-banner .container {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 166px;
-  height: 72px;
+  width: 100%;
+  height: 100%;
   z-index: 1;
 }
 section#main-banner .container h1 {
@@ -211,6 +225,54 @@ section#main-banner .container button {
   color: white;
 }
 
+@media screen and (min-width: 768px) {
+  section#main-banner {
+    height: 300px;
+    padding: 100px 0 40px 0;
+  }
+  section#main-banner .container h1 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 40px;
+  }
+  section#main-banner .container p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  section#main-banner .container button {
+    width: 170px;
+    height: 50px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 15px;
+  }
+}
+@media screen and (min-width: 992px) {
+  section#main-banner {
+    height: 516px;
+    padding: 190px 0 100px 0;
+  }
+  section#main-banner .container h1 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 77px;
+  }
+  section#main-banner .container p {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 56px;
+  }
+  section#main-banner .container button {
+    width: 218px;
+    height: 68px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
 section#main-popular-categories {
   display: flex;
   flex-direction: column;
@@ -230,6 +292,13 @@ section#main-popular-categories .cards {
   height: 137px;
   gap: 10px;
 }
+section#main-popular-categories .cards div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 28px;
+}
 section#main-popular-categories .cards .card {
   display: flex;
   width: 100%;
@@ -237,17 +306,93 @@ section#main-popular-categories .cards .card {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 137px;
+  height: inherit;
   background-color: black;
   border-radius: 10px;
   color: white;
-  padding: 0 0 6px 0;
+  overflow: hidden;
 }
 section#main-popular-categories .cards .card img {
   border-radius: 10px;
   width: inherit;
+  height: 109px;
+  object-fit: cover;
+}
+section#main-popular-categories .cards .mw576 {
+  display: none;
+}
+section#main-popular-categories .cards .mw768 {
+  display: none;
+}
+section#main-popular-categories .points {
+  display: flex;
+  justify-content: space-between;
+  width: 43px;
+  height: 11px;
+}
+section#main-popular-categories .points .point {
+  width: 11px;
+  height: 11px;
+  border-radius: 50px;
+  border: 1.2px solid black;
+  cursor: pointer;
+}
+section#main-popular-categories .points .passive {
+  background-color: black;
 }
 
+@media screen and (min-width: 576px) {
+  section#main-popular-categories .cards .mw576 {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  section#main-popular-categories .cards .mw768 {
+    display: block;
+  }
+}
+@media screen and (min-width: 992px) {
+  section#main-popular-categories {
+    height: 464px;
+    font-family: "El Messiri";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    margin-top: 100px;
+  }
+  section#main-popular-categories .cards {
+    height: 341px;
+    gap: 20px;
+  }
+  section#main-popular-categories .cards .card {
+    max-width: 236px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+  }
+  section#main-popular-categories .cards .card img {
+    border-radius: 10px;
+    width: inherit;
+    height: 270px;
+    object-fit: cover;
+  }
+  section#main-popular-categories .cards div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 71px;
+  }
+  section#main-popular-categories .cards .mw576 {
+    display: block;
+  }
+  section#main-popular-categories .points {
+    display: none;
+  }
+}
 section#we-offer {
   display: flex;
   flex-direction: column;
@@ -284,7 +429,8 @@ section#we-offer .container .card {
   overflow: hidden;
 }
 section#we-offer .container .card img {
-  width: inherit;
+  width: 100%;
+  height: 100%;
   border-radius: 0 0 10px 10px;
   object-fit: cover;
 }
@@ -323,20 +469,118 @@ section#we-offer .container .nigiri img {
   height: 357px;
 }
 
-section#reviews .container .points, section#main-popular-categories .points {
+@media screen and (min-width: 992px) {
+  section#we-offer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 919px;
+    margin-top: 15px;
+  }
+  section#we-offer h1 {
+    font-family: "El Messiri";
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    color: black;
+  }
+  section#we-offer .container {
+    width: inherit;
+    height: 100%;
+    display: grid;
+    grid-template: 313px 406px/1fr 1fr;
+    gap: 60px;
+  }
+  section#we-offer .container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  section#we-offer .container .card img {
+    width: inherit;
+    border-radius: 0 0 10px 10px;
+    object-fit: cover;
+  }
+  section#we-offer .container .card .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    border-radius: 0 0 10px 10px;
+    width: inherit;
+    height: 75px;
+    min-height: 75px;
+    position: static;
+  }
+  section#we-offer .container .card .text p {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  section#we-offer .container .sushimaki {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template: 1fr 75px/1fr;
+    min-height: 312px;
+  }
+  section#we-offer .container .sushimaki img {
+    width: 100%;
+    height: auto;
+    min-height: 237px;
+    max-height: 237px;
+  }
+  section#we-offer .container .sushiset {
+    display: grid;
+    grid-template: 1fr 75px/1fr;
+    height: 100%;
+    width: 100%;
+  }
+  section#we-offer .container .sushiset img {
+    width: 100%;
+    height: 100%;
+    min-height: 331px;
+    max-height: 331px;
+  }
+  section#we-offer .container .nigiri {
+    display: grid;
+    grid-row: 1/3;
+    grid-column: 2/3;
+    width: 100%;
+    height: 100%;
+    grid-template: 1fr 75px/1fr;
+  }
+  section#we-offer .container .nigiri img {
+    width: 100%;
+    height: 100%;
+    min-height: 703px;
+    max-height: 703px;
+  }
+}
+section#reviews .container .points {
   display: flex;
   justify-content: space-between;
   width: 43px;
   height: 11px;
 }
-section#reviews .container .points .point, section#main-popular-categories .points .point {
+section#reviews .container .points .point {
   width: 11px;
   height: 11px;
   border-radius: 50px;
   border: 1.2px solid black;
   cursor: pointer;
 }
-section#reviews .container .points .passive, section#main-popular-categories .points .passive {
+section#reviews .container .points .passive {
   background-color: black;
 }
 
@@ -519,7 +763,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  z-index: 1000;
   padding: 0 18px;
   color: white;
 }
@@ -532,6 +775,17 @@ html {
   overflow-x: hidden;
   position: relative;
   display: block;
+}
+
+@media screen and (min-width: 992px) {
+  body {
+    padding: 0 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    padding: 0 95px;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
