--- a/styles/sections/header.scss
+++ b/styles/sections/header.scss
@@ -62,7 +62,8 @@ header{
     padding: 0 50px;
     section#icon{
       display: grid;
-      grid-template: 70px 62px /2fr 5fr 3fr 2fr 1fr;
+      grid-template: 70px 62px /1fr 2fr 2fr 2fr 1fr;
+      gap: 10px;
       width: 100%;
       height: inherit;
       img{
@@ -73,7 +74,7 @@ header{
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        width: 323px;
+        width: 230px;
         height: 28px;
         background-color: #F2F2F2;
         border-radius: 20px;
@@ -160,5 +161,14 @@ header{
 }
 
 @media screen and (min-width: 1200px) {
-
+  header{
+    height: 147px;
+    padding: 0 50px;
+    section#icon{
+      grid-template: 70px 62px /2fr 5fr 3fr 3fr 2fr;
+      .search{
+        width: 323px;
+      }
+    }
+  }
 }
