--- a/styles/sections/main-banner.scss
+++ b/styles/sections/main-banner.scss
@@ -10,6 +10,7 @@ section#main-banner{
   //background-image: url("./images/main-banner.jpg");
   position: relative;
   overflow: hidden;
+  padding: 62px 0 16px 0;
   img{
     position: absolute;
     left: 0;
@@ -25,8 +26,8 @@ section#main-banner{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 166px;
-    height: 72px;
+    width: 100%;
+    height: 100%;
     z-index: 1;
     //position: relative;
     h1{
@@ -56,5 +57,59 @@ section#main-banner{
       color: white;
     }
 
+  }
+}
+
+@media screen and (min-width: 768px){
+  section#main-banner{
+    height: 300px;
+    padding: 100px 0 40px 0;
+    .container{
+      h1{
+        font-style: normal;
+        font-weight: 400;
+        font-size: 36px;
+        line-height: 40px;
+      }
+      p{
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 30px;
+      }
+      button{
+        width: 170px;
+        height: 50px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 15px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px){
+  section#main-banner{
+    height: 516px;
+    padding: 190px 0 100px 0;
+    .container{
+      h1{
+        font-style: normal;
+        font-weight: 400;
+        font-size: 64px;
+        line-height: 77px;
+      }
+      p{
+        font-weight: 400;
+        font-size: 36px;
+        line-height: 56px;
+      }
+      button{
+        width: 218px;
+        height: 68px;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 28px;
+      }
+    }
   }
 }
