--- a/styles/sections/main-popular-categories.scss
+++ b/styles/sections/main-popular-categories.scss
@@ -15,6 +15,13 @@ section#main-popular-categories{
     width: 100%;
     height: 137px;
     gap: 10px;
+    div{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 28px;
+    }
     .card{
       display: flex;
       width: 100%;
@@ -22,16 +29,101 @@ section#main-popular-categories{
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      height: 137px;
+      height: inherit;
       background-color: black;
       border-radius: 10px;
       color: white;
-      padding: 0 0 6px 0;
+      overflow: hidden;
       img{
         border-radius: 10px;
         width: inherit;
+        height: 109px;
+        object-fit: cover;
+      }
+    }
+    .mw576{
+      display: none;
+    }
+    .mw768{
+      display: none;
+    }
+  }
+  .points{
+    display: flex;
+    justify-content: space-between;
+    width: 43px;
+    height: 11px;
+    .point{
+      width: 11px;
+      height: 11px;
+      border-radius: 50px;
+      border: 1.2px solid black;
+      cursor: pointer;
+    }
+    .passive{
+      background-color: black;
+    }
+  }
+}
+
+@media screen and (min-width: 576px) {
+  section#main-popular-categories {
+    .cards {
+      .mw576 {
+        display: block;
       }
     }
   }
-  @extend %points;
+}
+@media screen and (min-width: 768px) {
+  section#main-popular-categories {
+    .cards {
+      .mw768 {
+        display: block;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px){
+  section#main-popular-categories{
+    height: 464px;
+    font-family: 'El Messiri';
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    margin-top: 100px;
+    .cards{
+      height: 341px;
+      gap: 20px;
+      .card{
+        max-width: 236px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 21px;
+        text-align: center;
+        img{
+          border-radius: 10px;
+          width: inherit;
+          height: 270px;
+          object-fit: cover
+        }
+      }
+      div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 71px;
+      }
+      .mw576{
+        display: block;
+      }
+    }
+    .points{
+     display: none;
+    }
+  }
 }
