--- a/styles/sections/main-we-offer.scss
+++ b/styles/sections/main-we-offer.scss
@@ -35,7 +35,8 @@ section#we-offer{
       //z-index: -1000000;
       img{
         //width: 339px;
-        width: inherit;
+        width: 100%;
+        height: 100%;
         border-radius: 0 0 10px 10px;
         object-fit: cover;
         //z-index: -1000000;
@@ -74,6 +75,109 @@ section#we-offer{
       height: 396px;
       img{
         height: 357px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px){
+  section#we-offer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 919px;
+    margin-top: 15px;
+    h1{
+      font-family: 'El Messiri';
+      font-weight: 400;
+      font-size: 48px;
+      line-height: 75px;
+      color: black;
+    }
+    .container{
+      width: inherit;
+      height: 100%;
+      display: grid;
+      grid-template: 313px 406px / 1fr 1fr;
+      gap: 60px;
+      .card{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        border-radius: 10px;
+        overflow: hidden;
+        //z-index: -1000000;
+        img{
+          //width: 339px;
+          width: inherit;
+          border-radius: 0 0 10px 10px;
+          object-fit: cover;
+          //z-index: -1000000;
+        }
+        .text{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: black;
+          border-radius: 0 0 10px 10px;
+          width: inherit;
+          height: 75px;
+          min-height: 75px;
+          position: static;
+          p{
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 14px;
+          }
+        }
+      }
+      .sushimaki{
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template: 1fr 75px / 1fr;
+        min-height: 312px;
+        img{
+          width: 100%;
+          height: auto;
+          min-height: 237px;
+          max-height: 237px;
+        }
+
+      }
+      .sushiset{
+        display: grid;
+        grid-template: 1fr 75px / 1fr;
+        height: 100%;
+        width: 100%;
+        img{
+          width: 100%;
+          height: 100%;
+          min-height: 331px;
+          max-height: 331px;
+        }
+      }
+      .nigiri{
+        display: grid;
+        grid-row: 1/3;
+        grid-column: 2/3;
+        width: 100%;
+        height: 100%;
+        grid-template: 1fr 75px / 1fr;
+        img{
+          width: 100%;
+          height: 100%;
+          min-height: 703px;
+          max-height: 703px;
+        }
       }
     }
   }
