--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,7 @@ header section#icon button.burger-menu {
   align-items: center;
   width: 18px;
   height: 15px;
+  background-color: white;
 }
 header section#icon button.burger-menu div {
   width: inherit;
@@ -51,6 +52,42 @@ header section#icon .classes {
   display: none;
 }
 
+@media screen and (min-width: 768px) {
+  header {
+    width: 100%;
+    height: 100px;
+  }
+  header section#icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: inherit;
+  }
+  header section#icon img {
+    width: auto;
+    height: 45px;
+  }
+  header section#icon .empty {
+    width: 18px;
+    height: 15px;
+  }
+  header section#icon button.burger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 24px;
+    height: 21px;
+  }
+  header section#icon button.burger-menu div {
+    width: inherit;
+    height: 3px;
+    background-color: black;
+    border-radius: 50px;
+  }
+}
 @media screen and (min-width: 992px) {
   header {
     width: 100%;
@@ -65,7 +102,7 @@ header section#icon .classes {
     height: inherit;
   }
   header section#icon img {
-    width: 104px;
+    height: 38px;
   }
   header section#icon .search {
     display: flex;
@@ -351,14 +388,14 @@ section#main-popular-categories .points .passive {
     display: block;
   }
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   section#main-popular-categories {
-    height: 464px;
+    height: 490px;
     font-family: "El Messiri";
     font-weight: 400;
     font-size: 48px;
     line-height: 75px;
-    margin-top: 100px;
+    margin-top: 80px;
   }
   section#main-popular-categories .cards {
     height: 341px;
@@ -402,6 +439,14 @@ section#we-offer {
   height: 824px;
   margin-top: 15px;
 }
+section#we-offer h1 {
+  font-family: "El Messiri";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: black;
+}
 section#we-offer .container {
   width: inherit;
   height: inherit;
@@ -409,14 +454,6 @@ section#we-offer .container {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-}
-section#we-offer .container h1 {
-  font-family: "El Messiri";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-  color: black;
 }
 section#we-offer .container .card {
   display: flex;
@@ -469,15 +506,10 @@ section#we-offer .container .nigiri img {
   height: 357px;
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   section#we-offer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 919px;
-    margin-top: 15px;
+    height: 930px;
+    margin-top: 65px;
   }
   section#we-offer h1 {
     font-family: "El Messiri";
@@ -488,21 +520,14 @@ section#we-offer .container .nigiri img {
   }
   section#we-offer .container {
     width: inherit;
-    height: 100%;
+    max-height: 779px;
     display: grid;
     grid-template: 313px 406px/1fr 1fr;
     gap: 60px;
   }
   section#we-offer .container .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
     height: 100%;
-    background-color: black;
-    border-radius: 10px;
-    overflow: hidden;
   }
   section#we-offer .container .card img {
     width: inherit;
@@ -510,22 +535,14 @@ section#we-offer .container .nigiri img {
     object-fit: cover;
   }
   section#we-offer .container .card .text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    border-radius: 0 0 10px 10px;
-    width: inherit;
     height: 75px;
     min-height: 75px;
     position: static;
   }
   section#we-offer .container .card .text p {
-    font-family: "Roboto";
-    font-style: normal;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 18px;
+    line-height: 21px;
   }
   section#we-offer .container .sushimaki {
     width: 100%;
@@ -535,7 +552,6 @@ section#we-offer .container .nigiri img {
     min-height: 312px;
   }
   section#we-offer .container .sushimaki img {
-    width: 100%;
     height: auto;
     min-height: 237px;
     max-height: 237px;
@@ -567,37 +583,16 @@ section#we-offer .container .nigiri img {
     max-height: 703px;
   }
 }
-section#reviews .container .points {
-  display: flex;
-  justify-content: space-between;
-  width: 43px;
-  height: 11px;
-}
-section#reviews .container .points .point {
-  width: 11px;
-  height: 11px;
-  border-radius: 50px;
-  border: 1.2px solid black;
-  cursor: pointer;
-}
-section#reviews .container .points .passive {
-  background-color: black;
-}
-
 section#reviews {
-  width: 100%;
-  height: 240px;
-  margin-top: 14px;
-}
-section#reviews .container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 240px;
+  margin-top: 14px;
 }
-section#reviews .container h1 {
+section#reviews h1 {
   font-family: "El Messiri";
   font-style: normal;
   font-weight: 400;
@@ -605,19 +600,24 @@ section#reviews .container h1 {
   line-height: 22px;
   color: black;
 }
+section#reviews .container {
+  align-items: center;
+  width: inherit;
+  height: 135px;
+}
 section#reviews .container .card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   width: inherit;
-  height: 135px;
+  height: inherit;
   background-color: black;
   border-radius: 10px;
 }
 section#reviews .container .card .review {
   width: inherit;
-  height: 105px;
+  height: 100%;
   border: 2px solid black;
   border-radius: 10px;
   background-color: white;
@@ -632,9 +632,36 @@ section#reviews .container .card .review p {
   line-height: 14px;
 }
 section#reviews .container .card .stars {
-  margin-bottom: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  width: inherit;
+  height: 30px;
 }
-section#reviews .container p {
+section#reviews .container .mw576 {
+  display: none;
+}
+section#reviews .container .mw768 {
+  display: none;
+}
+section#reviews .points {
+  display: flex;
+  justify-content: space-between;
+  width: 43px;
+  height: 11px;
+}
+section#reviews .points .point {
+  width: 11px;
+  height: 11px;
+  border-radius: 50px;
+  border: 1.2px solid black;
+  cursor: pointer;
+}
+section#reviews .points .passive {
+  background-color: black;
+}
+section#reviews p {
   font-family: "El Messiri";
   font-style: normal;
   font-weight: 400;
@@ -643,6 +670,98 @@ section#reviews .container p {
   color: black;
 }
 
+@media screen and (min-width: 576px) {
+  section#reviews .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    align-items: center;
+    width: inherit;
+    height: 135px;
+  }
+  section#reviews .container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+  }
+  section#reviews .container .mw576 {
+    display: flex;
+  }
+  section#reviews .container .mw768 {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  section#reviews {
+    height: 600px;
+    margin-top: 100px;
+  }
+  section#reviews h1 {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+    margin-bottom: 10px;
+  }
+  section#reviews p {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 75px;
+  }
+  section#reviews .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: inherit;
+    height: 275px;
+    gap: 7%;
+  }
+  section#reviews .container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 373px;
+    height: inherit;
+    background-color: black;
+    border-radius: 10px;
+  }
+  section#reviews .container .card .review {
+    width: inherit;
+    height: 100%;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+    padding: 33px 33px;
+  }
+  section#reviews .container .card .review p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+  }
+  section#reviews .container .card .stars {
+    gap: 4px;
+    height: 60px;
+  }
+  section#reviews .container .card .stars svg {
+    width: 22px;
+    height: 18px;
+  }
+  section#reviews .points {
+    width: 86px;
+    height: 20px;
+  }
+  section#reviews .points .point {
+    width: 20px;
+    height: 20px;
+    border-radius: 50px;
+    border: 2px solid black;
+  }
+}
 footer {
   width: 100%;
 }
@@ -659,7 +778,7 @@ footer .container .card {
   background-color: black;
   border-radius: 10px;
 }
-footer .container .card div {
+footer .container .card .text {
   width: inherit;
   height: 439px;
   border: 2px solid black;
@@ -668,12 +787,19 @@ footer .container .card div {
   color: black;
   padding: 11px 30px;
 }
-footer .container .card div p {
+footer .container .card .text p {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
+}
+footer .container .card .creator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: inherit;
+  height: 34px;
 }
 footer .container .card .stars {
   margin-bottom: 6px;
