--- a/styles/sections/header.scss
+++ b/styles/sections/header.scss
@@ -22,6 +22,7 @@ header{
       align-items: center;
       width: 18px;
       height: 15px;
+      background-color: white;
       div{
         width: inherit;
         height: 2.85px;
@@ -52,7 +53,40 @@ header{
 }
 
 @media screen and (min-width: 768px) {
-
+  header{
+    width: 100%;
+    height: 100px;
+    section#icon{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      height: inherit;
+      img{
+        width: auto;
+        height: 45px;
+      }
+      .empty{
+        width: 18px;
+        height: 15px;
+      }
+      button.burger-menu{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 24px;
+        height: 21px;
+        div{
+          width: inherit;
+          height: 3px;
+          background-color: black;
+          border-radius: 50px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -67,7 +101,7 @@ header{
       width: 100%;
       height: inherit;
       img{
-        width: 104px;
+        height: 38px;
       }
       .search{
         display: flex;
