--- a/styles/sections/main-reviews.scss
+++ b/styles/sections/main-reviews.scss
@@ -1,36 +1,38 @@
 @import "templates.scss";
 
 section#reviews{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 240px;
   margin-top: 14px;
+  h1{
+    font-family: 'El Messiri';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: black;
+  }
   .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     width: inherit;
-    height: inherit;
-    h1{
-      font-family: 'El Messiri';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 22px;
-      color: black;
-    }
+    height: 135px;
     .card{
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       width: inherit;
-      height: 135px;
+      height: inherit;
       background-color: black;
       border-radius: 10px;
       .review{
         width: inherit;
-        height: 105px;
+        height: 100%;
+        //max-height: 105px;
         border: 2px solid black;
         border-radius: 10px;
         background-color: white;
@@ -45,18 +47,140 @@ section#reviews{
         }
       }
       .stars{
-        margin-bottom: 6px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2px;
+        width: inherit;
+        height: 30px;
       }
     }
-    @extend %points;
-    p{
-      font-family: 'El Messiri';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 22px;
-      color: black;
+    .mw576{
+      display: none;
+    }
+    .mw768{
+      display: none;
+    }
+  }
+  .points{
+    display: flex;
+    justify-content: space-between;
+    width: 43px;
+    height: 11px;
+    .point{
+      width: 11px;
+      height: 11px;
+      border-radius: 50px;
+      border: 1.2px solid black;
+      cursor: pointer;
+    }
+    .passive{
+      background-color: black;
+    }
+  }
+  p{
+    font-family: 'El Messiri';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: black;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  section#reviews{
+    .container{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 20px;
+      align-items: center;
+      width: inherit;
+      height: 135px;
+      .card{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: auto;
+      }
+      .mw576{
+        display: flex;
+      }
+      .mw768{
+        display: none;
+      }
     }
   }
 }
 
+@media screen and (min-width: 768px){
+  section#reviews{
+    height: 600px;
+    margin-top: 100px;
+    h1{
+      font-weight: 400;
+      font-size: 48px;
+      line-height: 75px;
+      margin-bottom: 10px;
+    }
+    p{
+      font-weight: 400;
+      font-size: 48px;
+      line-height: 75px;
+    }
+    .container{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: inherit;
+      height: 275px;
+      gap: 7%;
+      .card{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 373px;
+        height: inherit;
+        background-color: black;
+        border-radius: 10px;
+        .review{
+          width: inherit;
+          height: 100%;
+          border: 2px solid black;
+          border-radius: 10px;
+          background-color: white;
+          color: black;
+          padding: 33px 33px;
+          p{
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+          }
+        }
+        .stars{
+          gap: 4px;
+          height: 60px;
+          svg{
+            width: 22px;
+            height: 18px;
+          }
+        }
+      }
+
+    }
+    .points{
+      width: 86px;
+      height: 20px;
+      .point{
+        width: 20px;
+        height: 20px;
+        border-radius: 50px;
+        border: 2px solid black;
+      }
+    }
+  }
+}
