--- a/styles/sections/footer.scss
+++ b/styles/sections/footer.scss
@@ -12,6 +12,10 @@ footer{
       background-color: black;
       border-radius: 10px;
       .text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: start;
         width: inherit;
         height: 439px;
         border: 2px solid black;
@@ -19,6 +23,79 @@ footer{
         background-color: white;
         color: black;
         padding: 11px 30px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
+        .columns{
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: start;
+          height: 384px;
+          div{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            color: black;
+            a{
+              color: black;
+              img{
+                width: 17px;
+                height: 14px;
+                margin-right: 10px;
+              }
+            }
+            a:hover{
+              text-decoration: underline;
+            }
+            h1{
+              margin-bottom: 16px;
+            }
+          }
+          .our-contacts{
+            height: 114px;
+          }
+          .info{
+            height: 103px;
+          }
+          .call-us{
+            height: 97px;
+            a{
+              font-weight: 400;
+              font-size: 14px;
+              line-height: 16px;
+              color: red;
+            }
+            .social-network{
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              align-items: center;
+              width: 148px;
+              height: 35px;
+              margin-top: 16px;
+              a{
+                width: 30px;
+                height: 30px;
+                img{
+                  width: inherit;
+                  height: inherit;
+                }
+              }
+            }
+
+          }
+
+
+        }
+        .rules{
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          flex-direction: row;
+        }
         p{
           font-family: 'Roboto';
           font-style: normal;
@@ -26,6 +103,7 @@ footer{
           font-size: 12px;
           line-height: 14px;
         }
+
       }
       .creator{
         display: flex;
@@ -33,9 +111,78 @@ footer{
         align-items: center;
         width: inherit;
         height: 34px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
       }
-      .stars{
-        margin-bottom: 6px;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  footer{
+    width: 100%;
+    margin-top: 70px;
+    .container{
+      width: inherit;
+      .card{
+        height: 473px;
+        border-radius: 15px;
+        .text{
+          height: 439px;
+          border-radius: 15px;
+          padding: 41px 55px;
+          font-size: 16px;
+          line-height: 19px;
+          .columns{
+            flex-direction: row;
+            width: 100%;
+            height: 215px;
+            div{
+              a{
+                img{
+                  width: 32px;
+                  height: 26px;
+                  margin-right: 15px;
+                }
+              }
+              h1{
+                margin-bottom: 16px;
+              }
+            }
+            .our-contacts{
+              height: inherit;
+            }
+            .info{
+              height: inherit;
+            }
+            .call-us{
+              height: 161px;
+              a{
+                font-size: 24px;
+                line-height: 28px;
+                color: red;
+              }
+              .social-network{
+                width: 213px;
+                height: 35px;
+                margin-top: 16px;
+                a{
+                  width: 43px;
+                  height: 42px;
+                }
+              }
+
+            }
+          }
+        }
+        .creator{
+          height: 62px;
+          font-size: 16px;
+          line-height: 19px;
+        }
       }
     }
   }
