--- a/styles/sections/main-banner.scss
+++ b/styles/sections/main-banner.scss
@@ -64,6 +64,7 @@ section#main-banner{
   section#main-banner{
     height: 300px;
     padding: 100px 0 40px 0;
+    border-radius: 15px;
     .container{
       h1{
         font-style: normal;
