--- a/styles/sections/main-we-offer.scss
+++ b/styles/sections/main-we-offer.scss
@@ -98,9 +98,10 @@ section#we-offer{
       .card{
         width: 100%;
         height: 100%;
+        border-radius: 15px;
         img{
           width: inherit;
-          border-radius: 0 0 10px 10px;
+          border-radius: 0 0 15px 15px;
           object-fit: cover;
         }
         .text{
