--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
 @import "sections/main-we-offer";
 @import "sections/main-reviews";
 @import "sections/footer";
+@import "sections/burger-menu";
 
 @import url(https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=El+Messiri&display=swap);
